--- a/pages/AboutMeNEW.html
+++ b/pages/AboutMeNEW.html
@@ -29,13 +29,206 @@ body {
 
 div {background-color: #EFEEEC}
 
+@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
+}
+@import url(http://fonts.googleapis.com/css?family=Titillium+Web:300);
+.fa-2x {
+font-size: 2em;
+}
+.fa {
+position: relative;
+display: table-cell;
+width: 60px;
+height: 36px;
+text-align: center;
+vertical-align: middle;
+font-size:20px;
+}
+
+.w3-third img{margin-bottom:-6px;opacity:0.8}
+.w3-third img:hover{opacity:1}
+
+.w3-row-padding img {margin-bottom: 12px}
+
+/* Set the width of the sidenav to 120px --- NOT SURE WHERE */
+.w3-sidenav {width: 120px; background: #222;}
+
+/* Add a left margin to the "page content" that matches the width of the sidenav (120px) */
+#main {margin-left: 120px}
+
+/* Remove margins from "page content" on small screens
+@media only screen and (max-width: 600px) {#main {margin-left: 0}} */
+
+.main-menu:hover,nav.main-menu.expanded {
+width:175px; /*width of navbar when expanded*/
+overflow:visible;
+}
+
+.main-menu {
+background:rgba(255,255,255,0.0);
+/*border-right:2.5px solid rgba(212,181,178,0.5) ; /*thickness of navbor border*/
+position:absolute;
+top:0;
+bottom:0;
+height:100%;
+left:0;
+width:60px; /*width of navbar */
+overflow:hidden;
+-webkit-transition:width .05s linear;
+transition:width .05s linear;
+-webkit-transform:translateZ(0) scale(1,1);
+z-index:1000;
+}
+
+.main-menu>ul {
+margin:350px 0; /*space from top of navbar, do not delete the 0*/
+}
+
+.main-menu li {
+position:relative;
+display:block;
+width:170px; /*width of text/blue rectangle hover in navbar*/
+color: transparent;
+}
+
+.main-menu li>a {
+position:relative;
+display:table;
+border-collapse:collapse;
+border-spacing:0;
+color:#999;
+ font-family: arial; /* not sure where */
+font-size: 20px;
+text-decoration:none;
+-webkit-transform:translateZ(0) scale(1,1);
+-webkit-transition:all .1s linear;
+transition:all .1s linear;
+
+}
+
+.main-menu .nav-icon {
+position:relative;
+display:table-cell;
+width:60px;
+height:36px;
+text-align:center;
+vertical-align:middle;
+font-size:18px;
+}
+
+.main-menu .nav-text {
+position:relative;
+display:table-cell;
+vertical-align:middle;
+width:190px;
+  font-family: "Archivo Narrow"; /* SIDE NAV FONT */
+  color: rgba(212,181,178,0.5);
+}
+
+.main-menu>ul.logout {
+position:absolute;
+left:0;
+bottom:0;
+}
+
+.no-touch .scrollable.hover {
+overflow-y:hidden;
+}
+
+.no-touch .scrollable.hover:hover {
+overflow-y:auto;
+overflow:visible;
+}
+
+a:hover,a:focus {
+text-decoration:none;
+}
+
+nav {
+-webkit-user-select:none;
+-moz-user-select:none;
+-ms-user-select:none;
+-o-user-select:none;
+user-select:none;
+}
+
+nav ul,nav li {
+outline:0;
+margin:0;
+padding:0;
+}
+/*.main-menu li:hover>a,nav.main-menu li.active>a,.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus,.dropdown-menu>.active>a,.dropdown-menu>.active>a:hover,.dropdown-menu>.active>a:focus,.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,.dashboard-page nav.dashboard-menu ul li.active a {
+color:#fff;
+background-color:#5fa2db;
+}
+.area {
+float: left;
+background: #e2e2e2;
+width: 100%;
+height: 100%;
+}
+/*@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');
+}*/
+
+
+
+
+
+
 
 </style>
 <body>
 
+  <!--Side navbar-->
+  <div class="area"></div><nav class="main-menu">
+              <ul>
+                  <li>
+                      <a class="w3-padding-large" href="../../index.html">
+                          <img src="../icons/home_icon.png" style="width: 60px">
+                          <span class="nav-text">
+                              HOME
+                          </span>
+                      </a>
+
+                  </li>
+                  <li class="has-subnav">
+                      <a class="w3-padding-large" href="../pages/PortfolioPageNEW.html">
+                          <img src="../icons/work_icon.png" style="width: 60px">
+                          <span class="nav-text">
+                              PORTFOLIO
+                          </span>
+                      </a>
+
+                  </li>
+                  <li class="has-subnav">
+                      <a class="w3-padding-large" href="../pages/AboutMeNEW.html">
+                         <img src="../icons/about_icon.png" style="width: 60px">
+                          <span class="nav-text">
+                              ABOUT ME
+                          </span>
+                      </a>
+
+                  </li>
+                  <li class="has-subnav">
+                      <a class="w3-padding-large" href="../pages/ContactPage.html">
+                         <img src="../icons/contact_icon.png" style="width: 60px">
+                          <span class="nav-text">
+                              CONTACT
+                          </span>
+                      </a>
+
+                  </li>
+
+          </nav>
+
+
   <!-- Header -->
   <header class="w3-display-container w3-content w3-wide" style="max-width:1600px" id="home">
-   <img class="w3-image" src="../imag/splash_wide.jpg" width="1600" height="1067">
+   <img class="w3-image" src="../imag/splash_wide2.jpg" width="1600" height="1067">
    <div class="w3-display-topleft w3-padding-xlarge ">
      <!--h1 class="w3-jumbo w3-text-white w3-opacity">Photographer and Web Designer</h1-->
    </div>
@@ -47,15 +240,15 @@ div {background-color: #EFEEEC}
 
   <!-- About Section -->
   <div class="w3-row w3-padding-64" id="about">
-    <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="../imag/me.jpg" class="w3-circle w3-image " width="600" height="600">
+    <div class="w3-col m6 w3-padding-xxlarge w3-hide-small">
+     <img src="../imag/me.jpg" class="w3-center w3-circle w3-image " width="400" height="400">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
       <h1 class="w3-center">BAO-ANH TRAN</h1>
-      <h5 class="w3-center">Established 1997</h5>
+      <h5 class="w3-center">Stamford, CT</h5>
       <!--h6 class="w3-center">University of Connecticut at Stamford</h6-->
-      <p class="w3-large w3-text-grey">Bao-Anh Tran is a student at the University of Connecticut at Stamford studying Digital Media and Design with a concentration in Web Design. After years of studying biology and chemistry in hopes of pursuing a medical career, she realized her true passion and heart for the arts. She enjoys photography as much as she does drawing, and is continuing to explore art mediums outside her comfort zone. She plans to one day work as a web or graphic designer for a small company in a big city. </p>
+      <p class="w3-padding-large w3-large w3-text-grey">Bao-Anh Tran is a student at the University of Connecticut at Stamford studying Digital Media and Design with a concentration in Web Design. She enjoys photography as much as she does drawing, and is continuing to explore art mediums outside her comfort zone. She plans to one day work as a web or graphic designer for a small company in New York City. </p>
    </div>
   </div>
 
