--- a/pages/PortfolioPageNEW.html
+++ b/pages/PortfolioPageNEW.html
@@ -8,6 +8,20 @@
 
 <style>
 
+h1,h2,h3,h4,h5 {
+    font-family: "Bebas Neue";
+    font-size: 175px;
+    color: rgba(44,64,89,0.5);
+}
+
+p {
+    font-family: "Archivo Narrow";
+    font-size: 25px;
+    color: rgba(181,171,166,0.5);
+}
+
+body, html {height: 100%}
+
 #left {
     background-color: rgb(44, 64, 89);
     height: 1000px;
@@ -35,6 +49,153 @@
 
 }
 
+
+@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
+}
+@import url(http://fonts.googleapis.com/css?family=Titillium+Web:300);
+.fa-2x {
+font-size: 2em;
+}
+.fa {
+position: relative;
+display: table-cell;
+width: 60px;
+height: 36px;
+text-align: center;
+vertical-align: middle;
+font-size:20px;
+}
+
+.w3-third img{margin-bottom:-6px;opacity:0.8}
+.w3-third img:hover{opacity:1}
+
+.w3-row-padding img {margin-bottom: 12px}
+
+/* Set the width of the sidenav to 120px --- NOT SURE WHERE */
+.w3-sidenav {width: 120px; background: #222;}
+
+/* Add a left margin to the "page content" that matches the width of the sidenav (120px) */
+#main {margin-left: 120px}
+
+/* Remove margins from "page content" on small screens
+@media only screen and (max-width: 600px) {#main {margin-left: 0}} */
+
+.main-menu:hover,nav.main-menu.expanded {
+width:175px; /*width of navbar when expanded*/
+overflow:visible;
+}
+
+.main-menu {
+background:rgba(255,255,255,0.0);
+/*border-right:2.5px solid rgba(212,181,178,0.5) ; /*thickness of navbor border*/
+position:absolute;
+top:0;
+bottom:0;
+height:100%;
+left:0;
+width:60px; /*width of navbar */
+overflow:hidden;
+-webkit-transition:width .05s linear;
+transition:width .05s linear;
+-webkit-transform:translateZ(0) scale(1,1);
+z-index:1000;
+}
+
+.main-menu>ul {
+margin:350px 0; /*space from top of navbar, do not delete the 0*/
+}
+
+.main-menu li {
+position:relative;
+display:block;
+width:170px; /*width of text/blue rectangle hover in navbar*/
+color: transparent;
+}
+
+.main-menu li>a {
+position:relative;
+display:table;
+border-collapse:collapse;
+border-spacing:0;
+color:#999;
+ font-family: arial; /* not sure where */
+font-size: 20px;
+text-decoration:none;
+-webkit-transform:translateZ(0) scale(1,1);
+-webkit-transition:all .1s linear;
+transition:all .1s linear;
+
+}
+
+.main-menu .nav-icon {
+position:relative;
+display:table-cell;
+width:60px;
+height:36px;
+text-align:center;
+vertical-align:middle;
+font-size:18px;
+}
+
+.main-menu .nav-text {
+position:relative;
+display:table-cell;
+vertical-align:middle;
+width:190px;
+  font-family: "Archivo Narrow"; /* SIDE NAV FONT */
+  color: rgba(212,181,178,0.5);
+}
+
+.main-menu>ul.logout {
+position:absolute;
+left:0;
+bottom:0;
+}
+
+.no-touch .scrollable.hover {
+overflow-y:hidden;
+}
+
+.no-touch .scrollable.hover:hover {
+overflow-y:auto;
+overflow:visible;
+}
+
+a:hover,a:focus {
+text-decoration:none;
+}
+
+nav {
+-webkit-user-select:none;
+-moz-user-select:none;
+-ms-user-select:none;
+-o-user-select:none;
+user-select:none;
+}
+
+nav ul,nav li {
+outline:0;
+margin:0;
+padding:0;
+}
+/*.main-menu li:hover>a,nav.main-menu li.active>a,.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus,.dropdown-menu>.active>a,.dropdown-menu>.active>a:hover,.dropdown-menu>.active>a:focus,.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,.dashboard-page nav.dashboard-menu ul li.active a {
+color:#fff;
+background-color:#5fa2db;
+}
+.area {
+float: left;
+background: #e2e2e2;
+width: 100%;
+height: 100%;
+}
+/*@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');
+}*/
+
+
 </style>
 
 
@@ -42,11 +203,17 @@
 
   <div>
       <div id="left" style="float: left; width: 40%; height: 100%;text-align: center">
-        <a href="#" style="text-decoration:none;">CHARCOAL</a><br>
-        <a href="#" style="text-decoration:none;">ILLUSTRATION</a><br>
+        <br>
+        <br>
+        <br>
+        <a href="/pages/subpages/CharcoalPage.html" style="text-decoration:none;">CHARCOAL</a><br>
+        <a href="/pages/subpages/IllustrationPage.html" style="text-decoration:none;">ILLUSTRATION</a><br>
         <a href="/pages/subpages/PortraitPageNEW.html" style="text-decoration:none;">PORTRAIT PHOTOGRAPHY</a><br>
-        <a href="#" style="text-decoration:none;">MISC PHOTOGRAPHY</a>
-
+        <a href="/pages/subpages/DarkroomPhoto.html" style="text-decoration:none;">DARKROOM PHOTO</a><br>
+        <a href="/pages/subpages/Filmography.html" style="text-decoration:none;">FILMOGRAPHY</a><br>
+        <br>
+        <br>
+        <br>
 
       </div>
 
@@ -54,11 +221,57 @@
           <a href="/pages/subpages/PortraitPageNEW.html">
             <img src="/gif/portraits.gif" style="width: 50%">
           </a>
+          <br>
+          <br>
+          <br>
+          <br>
       </div>
   </div>
 
+  <!--Side navbar-->
+  <div class="area"></div><nav class="main-menu">
+              <ul>
+                  <li>
+                      <a class="w3-padding-large" href="../../index.html">
+                          <img src="../icons/home_icon.png" style="width: 60px">
+                          <span class="nav-text">
+                              HOME
+                          </span>
+                      </a>
+
+                  </li>
+                  <li class="has-subnav">
+                      <a class="w3-padding-large" href="../pages/PortfolioPageNEW.html">
+                          <img src="../icons/work_icon.png" style="width: 60px">
+                          <span class="nav-text">
+                              PORTFOLIO
+                          </span>
+                      </a>
+
+                  </li>
+                  <li class="has-subnav">
+                      <a class="w3-padding-large" href="../pages/AboutMeNEW.html">
+                         <img src="../icons/about_icon.png" style="width: 60px">
+                          <span class="nav-text">
+                              ABOUT ME
+                          </span>
+                      </a>
+
+                  </li>
+                  <li class="has-subnav">
+                      <a class="w3-padding-large" href="#">
+                         <img src="../icons/contact_icon.png" style="width: 60px">
+                          <span class="nav-text">
+                              CONTACT
+                          </span>
+                      </a>
+
+                  </li>
+
+          </nav>
 
   <script>
+
   // Script to open and close sidenav
   function w3_open() {
     document.getElementById("mySidenav").style.display = "block";
@@ -79,6 +292,8 @@
   }
 
   </script>
+
+
 
 </body>
 </html>
