--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ height: 100%;
 
                 </li>
                 <li class="has-subnav">
-                    <a class="w3-padding-large" href="#">
+                    <a class="w3-padding-large" href="pages/ContactPage.html">
                        <img src="icons/contact_icon.png" style="width: 60px">
                         <span class="nav-text">
                             CONTACT
